--- a/_includes/demos/form-json-binding.html
+++ b/_includes/demos/form-json-binding.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8" />
 
 	<title>
-		JSON (Nested) + FORM -> Two Way Data Binding
+		Two Way Data Binding of nested JSON and a Form
 	</title>
 
 
 </head>
 <body ng-controller="MainCtrl">
 
-    <h1>JSON (Nested) + FORM -> Two Way Data Binding</h1>
+    <h1>Two Way Data Binding of nested JSON and a Form</h1>
     <div ng-repeat="(key, value) in inputs">
 		<h2>{{key}}</h2>
 		<div ng-repeat="(key2, value2) in value">
