--- a/_layouts/demo.html
+++ b/_layouts/demo.html
@@ -1,4 +1,6 @@
 ---
-layout: demo
+theme :
+   name : twitter
 ---
-{% include demos/observer-pattern-in-service.html %}
+
+{% include {{page.filee}} %}
