--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -63,21 +63,16 @@
                 {% include JB/pages_list %}
             </ul>
             <form class="navbar-form navbar-right" style="padding-right:0px" ng-controller="GithubCtrl">
-                <div style="text-align:right" class="btn-group">
-                    <button type="button" class="btn btn-warning btn-middle" ng-click="requestCode()" ng-show="!user">Login with Github</button>
-                    <button type="button" class="btn btn-warning btn-middle dropdown-toggle" style="height:36px" data-toggle="dropdown" ng-show="!user">
+                <button type="button" class="btn btn-warning btn-middle" ng-click="requestCode()" ng-show="!user">Login with Github</button>
+				<div style="text-align:right" class="btn-group" ng-show="user">
+                    <button type="button" class="btn btn-success btn-middle ng-hide" ng-click="logout()" >{% raw %} {{user}} {% endraw %}</button>
+                    <button type="button" class="btn btn-success btn-middle ng-hide dropdown-toggle" style="height:36px" data-toggle="dropdown">
                         <span class="caret"></span>
                         <span class="sr-only">Toggle Dropdown</span>
                     </button>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="fork.html">Fork</a></li>
                         <li><a href="app/admin/editConfig.html">Edit Config</a></li>
-                    </ul>
-                </div>
-				<div style="text-align:right"><a href="" class="btn btn-success btn-middle ng-hide" ng-click="logout()" ng-show="user">{% raw %} {{user}} {% endraw %}</a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Fork</a></li>
-                        <li><a href="#">Edit Config</a></li>
                     </ul>
                 </div>
             </form>
