--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -46,7 +46,7 @@
 </head>
 
 <body style="background-image: url(/assets/themes/patterns/paper.png); background-position: initial initial; background-repeat: initial initial;" id="myApp">
-<toaster-container toaster-options="{'time-out': 3000, 'position-class': 'toast-top-full-width'}"></toaster-container>
+<toaster-container toaster-options="{'time-out': 3000, 'position-class': 'toast-bottom-right'}"></toaster-container>
 <div class="navbar navbar-default ">
     <div class="container col-lg-7 col-centered" style="float:none">
         <div class="navbar-header">
