--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -72,8 +72,8 @@
                         <span class="sr-only">Toggle Dropdown</span>
                     </button>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="app/admin/fork.html">Fork</a></li>
-                        <li><a href="app/admin/editConfig.html">Edit Config</a></li>
+                        <li><a href="/app/admin/fork.html">Fork</a></li>
+                        <li><a href="/app/admin/editConfig.html">Edit Config</a></li>
                     </ul>
                 </div>
             </form>
