--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -82,7 +82,7 @@
 </div>
 <div class="container col-lg-7 col-centered" style="float:none">
     {{ content }}
-
+adsfsdaf
 {% if page.comments != false %}
     {% include widgets/comments/recentComments.html %}
     {% include widgets/comments/form.html %}
