--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -74,6 +74,7 @@
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="/app/admin/fork.html">Fork</a></li>
                         <li><a href="/app/admin/editConfig.html">Edit Config</a></li>
+                        <li><a href="/app/admin/createPost.html">Create Post</a></li>
                     </ul>
                 </div>
             </form>
