--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -45,7 +45,7 @@
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 </head>
 
-<body style="background-image: url(/assets/themes/patterns/paper.png); background-position: initial initial; background-repeat: initial initial;" id="myApp" ng-csp="">
+<body style="background-image: url(/assets/themes/patterns/paper.png); background-position: initial initial; background-repeat: initial initial;" id="myApp">
 <toaster-container toaster-options="{'time-out': 3000, 'position-class': 'toast-bottom-right'}" ng-controller="ToasterController"></toaster-container>
 <div class="navbar navbar-default ">
     <div class="container col-lg-7 col-centered" style="float:none">
