--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -66,8 +66,10 @@
             <form class="navbar-form navbar-right" style="padding-right:0px" ng-controller="GithubCtrl">
                 <button type="button" class="btn btn-warning btn-middle" ng-click="requestCode()" ng-show="!user">Login with Github</button>
 				<div style="text-align:right" class="btn-group" ng-show="user">
-                    <span class="glyphicon glyphicon-user"></span>
-                    <button type="button" class="btn btn-success btn-middle" ng-click="logout()" >{% raw %} {{user}} {% endraw %}</button>
+                    <button type="button" class="btn btn-success btn-middle" ng-click="logout()" >
+                        <span class="glyphicon glyphicon-user"></span>
+                        {% raw %} {{user}} {% endraw %}
+                    </button>
                     <button type="button" class="btn btn-success btn-middle dropdown-toggle" style="height:34px" data-toggle="dropdown">
                         <span class="caret"></span>
                         <span class="sr-only">Toggle Dropdown</span>
