--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -25,7 +25,7 @@
     {% endif %}
 
     <!-- Le styles -->
-    <link href="/assets/themes/bootstrap-3.1.1/css/angularui/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/themes/bootstrap-3.1.1/css/lumen/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/themes/syntax/style-addition.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="/assets/themes/syntax/syntax.css" rel="stylesheet" type="text/css" media="all">
     <link href="/assets/js/bootstrap-markdown-2.3.1/css/bootstrap-markdown.min.css" rel="stylesheet" type="text/css" media="all">
