--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -78,7 +78,7 @@
                         <li><a href="/app/admin/fork.html">Fork</a></li>
                         <li><a href="/app/admin/editConfig.html">Edit Config</a></li>
                         <li><a href="/app/admin/edit.html?path=_posts/2014-04-12-creating-this-site.md&url=/frontpage/2014/04/12/creating-this-site">Edit Post</a></li>
-                        <li><a href="/app/admin/createPost.html">Create Post</a></li>
+                        <li><a href="/app/admin/edit.html">Create Post</a></li>
                     </ul>
                 </div>
             </form>
