--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -30,6 +30,7 @@
     <link href="/assets/themes/syntax/syntax.css" rel="stylesheet" type="text/css" media="all">
     <link href="/assets/js/bootstrap-markdown-2.3.1/css/bootstrap-markdown.min.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/assets/js/toaster-0.4.5/toaster.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/assets/js/dialogs-3.0/dialogs.min.css" rel="stylesheet" type="text/css" media="all">
 
 
     <!-- Le fav and touch icons -->
