--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -76,7 +76,7 @@
                         <span class="sr-only">Toggle Dropdown</span>
                     </button>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="/app/admin/fork.html">Fork</a></li>
+                        <li><a href="/app/admin/fork.html">Clone/Fork</a></li>
                         <li><a href="/app/admin/editConfig.html">Edit Config</a></li>
                         <li><a href="/app/admin/edit.html">Create Post</a></li>
                     </ul>
