--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -1,5 +1,5 @@
 <legend>Comments</legend>
-<div class="row">
+<div class="row" ng-show="comments.entries">
     <div class="panel panel-default widget" style="margin-left:13px;margin-right:13px">
         <div class="panel-heading">
             <span class="glyphicon glyphicon-comment"></span>
