--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -24,8 +24,17 @@
     </script>
     {% endif %}
 
-    <!-- Le styles -->
-    <link href="/assets/themes/bootstrap-3.1.1/css/{{site.JB.theme}}/bootstrap.min.css" rel="stylesheet">
+    <!-- http://www.thesitewizard.com/css/switch-alternate-css-styles.shtml -->
+    <link href="/assets/themes/bootstrap-3.1.1/css/{{site.JB.theme}}/bootstrap.min.css" rel="stylesheet" title="default">
+	<link href="/assets/themes/bootstrap-3.1.1/css/angularui/bootstrap.min.css" rel="alternate stylesheet" title="angularui">
+	<link href="/assets/themes/bootstrap-3.1.1/css/darkly/bootstrap.min.css" rel="alternate stylesheet" title="darkly">
+	<link href="/assets/themes/bootstrap-3.1.1/css/flatly/bootstrap.min.css" rel="alternate stylesheet" title="flatly">
+	<link href="/assets/themes/bootstrap-3.1.1/css/lumen/bootstrap.min.css" rel="alternate stylesheet" title="lumen">
+	<link href="/assets/themes/bootstrap-3.1.1/css/simplex/bootstrap.min.css" rel="alternate stylesheet" title="simplex">
+	<link href="/assets/themes/bootstrap-3.1.1/css/spacelab/bootstrap.min.css" rel="alternate stylesheet" title="spacelab">
+	<link href="/assets/themes/bootstrap-3.1.1/css/superhero/bootstrap.min.css" rel="alternate stylesheet" title="superhero">
+	<link href="/assets/themes/bootstrap-3.1.1/css/yeti/bootstrap.min.css" rel="alternate stylesheet" title="yeti">
+	
     <link href="/assets/themes/syntax/style-addition.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="/assets/themes/syntax/syntax.css" rel="stylesheet" type="text/css" media="all">
     <link href="/assets/js/bootstrap-markdown-2.3.1/css/bootstrap-markdown.min.css" rel="stylesheet" type="text/css" media="all">
