--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -75,21 +75,20 @@
             </ul>
             <form class="navbar-form navbar-right" style="padding-right:0px" ng-controller="GithubCtrl">
                 <button ng-cloak type="button" class="btn btn-warning btn-middle ng-hide" ng-click="requestCode()" ng-show="!user">Login with Github</button>
-				<div ng-cloak style="text-align:right" class="btn-group ng-hide" ng-show="user">
-                    <button type="button" class="btn btn-success btn-middle" ng-click="logout()" >
-                        <span class="glyphicon glyphicon-user"></span>
-                        {% raw %} {{user}} {% endraw %}
-                    </button>
-                    <button type="button" class="btn btn-success btn-middle dropdown-toggle" style="height:36px" data-toggle="dropdown">
-                        <span class="caret"></span>
-                        <span class="sr-only">Toggle Dropdown</span>
-                    </button>
-                    <ul class="dropdown-menu" role="menu">
+				<div class="btn-group" ng-show="user" ng-cloak style="text-align:right">
+				  <button type="button" class="btn btn-success">
+					<span class="glyphicon glyphicon-user"></span>
+                    {% raw %} {{user}} {% endraw %}
+				  </button>
+				  <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+				  <ul class="dropdown-menu">
                         <li><a href="/app/admin/fork.html">Clone/Fork</a></li>
                         <li><a href="/app/admin/editConfig.html">Edit Config</a></li>
                         <li><a href="/app/admin/edit.html">Create Post</a></li>
-                    </ul>
-                </div>
+					<li class="divider"></li>
+					<li><a href="#" ng-click="logout()">Logout</a></li>
+				  </ul>
+				</div>
             </form>
         </div>
     </div>
