--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -84,8 +84,8 @@
 					  <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
 					  <ul class="dropdown-menu">
 							<li><a href="/app/admin/fork.html">Clone/Fork</a></li>
-							<li><a href="/app/admin/editConfig.html">Edit Config</a></li>
-							<li><a href="/app/admin/edit.html">Create Post</a></li>
+							<li ng-hide="!user.isAdmin"><a href="/app/admin/editConfig.html">Edit Config</a></li>
+							<li ng-hide="!user.isAdmin"><a href="/app/admin/edit.html">Create Post</a></li>
 							<li class="divider"></li>
 							<li><a href="#" ng-click="logout()">Logout</a></li>
 					  </ul>
