--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -79,7 +79,7 @@
 					<div ng-cloak class="btn-group" ng-show="user" style="text-align:right ng-hide">
 					  <button type="button" class="btn btn-success">
 						<span class="glyphicon glyphicon-user"></span>
-						{% raw %} {{user}} {% endraw %}
+						{% raw %} {{user.name}} {% endraw %}
 					  </button>
 					  <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
 					  <ul class="dropdown-menu">
