--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -1,6 +1,6 @@
 <legend>Comments</legend>
 <div>{{ (comments.entries | filter: { pageTitle: filterString }).length==0 }}</div>
-<div class="row" ng-show="comments.entries.length > 0">
+<div class="row" ng-show="(comments.entries | filter: { pageTitle: filterString }).length>0">
     <div class="panel panel-default widget" style="margin-left:13px;margin-right:13px">
         <div class="panel-heading">
             <span class="glyphicon glyphicon-comment"></span>
