--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -1,6 +1,6 @@
 <!-- only show this block, if there are any comments for this page -->
 <div ng-show="(comments.entries | filter: { pageTitle: filterString }).length>0">
-	<legend><span class="glyphicon glyphicon-comment"></span>Comments</legend>
+	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> Comments</legend>
 	<div class="row">
 		<div class="panel panel-default widget" style="margin-left:13px;margin-right:13px">
 			<div class="panel-heading">
