--- a/_includes/widgets/comments/form.html
+++ b/_includes/widgets/comments/form.html
@@ -1,4 +1,4 @@
-<legend>Drop me a line!</legend>
+<legend><span class="glyphicon glyphicon-edit" style="font-size:0.8em"></span> Drop me a line!</legend>
 <div class="row">
     <div class="col-sm-12 contact-form">
         <form id="comment" class="form" role="form">
