--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -1,6 +1,12 @@
 <!-- only show this block, if there are any comments for this page -->
 <div ng-show="(comments.entries | filter: { pageTitle: filterString }).length>0">
 	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> Comments</legend>
+		<div>
+			<div class="col-md-4" style="background-color:blue">
+				dsfasdf
+			</div>
+			<div class="col-md-8" style="background-color:green">Text</div>
+		<div>
 		<div class="panel panel-default widget">
 			<div class="panel-body">
 				<ul class="list-group">
