--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -3,9 +3,12 @@
 	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> Comments</legend>
 		<div>
 			<div class="col-md-2" style="background-color:blue">
-				dsfasdf
+				<a href="tst">Page Title</a>
+				<div class="mic-info"> By: <a href="mailto:">Blabla</a> on 2014</div>
 			</div>
-			<div class="col-md-10" style="background-color:green">Text</div>
+			<div class="col-md-10" style="background-color:green">
+				<div class="comment-text">Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar</div>
+			</div>
 		<div>
 		<div class="panel panel-default widget">
 			<div class="panel-body">
