--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,5 +1,6 @@
 <div id="entry-list">
 
+	<legend><span class="glyphicon glyphicon-tree-deciduous" style="font-size:0.8em"></span> Posts</legend>
     <div class="" style="">
         <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
     </div>
