--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -28,7 +28,7 @@
             </tbody>
         </table>
     </div>
-	<div class="" style="">
+	<div class="panel panel-default widget" style="">
         <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
     </div>
 </div>
