--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -7,7 +7,7 @@
 				<div class="mic-info"> By: <a href="mailto:">Blabla</a> on 2014</div>
 			</div>
 			<div class="col-md-10" style="background-color:green">
-				<div class="comment-text">Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar</div>
+				<div class="comment-text">Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar</div>
 			</div>
 		<div>
 		<div class="panel panel-default widget">
