--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -1,7 +1,7 @@
 <!-- only show this block, if there are any comments for this page -->
 <div ng-show="(comments.entries | filter: { pageTitle: filterString }).length>0">
 	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> Comments</legend>
-		<div>
+		<div class="row">
 			<div class="col-md-2" style="background-color:blue">
 				<a href="tst">Page Title</a>
 				<div class="mic-info"> By: <a href="mailto:">Blabla</a> on 2014</div>
