--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -1,32 +1,14 @@
 <!-- only show this block, if there are any comments for this page -->
 <div ng-show="(comments.entries | filter: { pageTitle: filterString }).length>0">
 	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> Comments</legend>
-		<div class="row list-group-item">
+
+		<div class="row" ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">>
 			<div class="col-md-2" style="background-color:blue">
-				<a href="tst">Page Title</a>
-				<div class="mic-info"> By: <a href="mailto:">Blabla</a> on 2014</div>
+				<a href="tst">{{comment.pageTitle}}</a>
+				<div class="mic-info"> By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</div>
 			</div>
 			<div class="col-md-10" style="background-color:green">
-				<div class="comment-text">Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar Text Kommentar</div>
+				<div class="comment-text">{{comment.message}}</div>
 			</div>
 		<div>
-		<div class="panel panel-default widget">
-			<div class="panel-body">
-				<ul class="list-group">
-					<li class="list-group-item" ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
-						<div class="row">
-
-							<div class="col-xs-10 col-md-11">
-								<div>
-									<a href="{{comment.pageUrl}}">{{comment.pageTitle}}</a>
-									<div class="mic-info"> By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</div>
-								</div>
-								<div class="comment-text">{{comment.message}}</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-				<a href="#" class="btn btn-primary btn-sm btn-block" role="button" ng-click="more()"><span class="glyphicon glyphicon-refresh"></span> More</a>
-			</div>
-		</div>
 </div>
