--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -2,13 +2,15 @@
 <div ng-show="(comments.entries | filter: { pageTitle: filterString }).length>0">
 	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> Comments</legend>
 
-		<div class="row" ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
-			<div class="col-md-2" style="background-color:blue">
-				<a href="tst">{{comment.pageTitle}}</a>
-				<div class="mic-info"> By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</div>
-			</div>
-			<div class="col-md-10" style="background-color:green">
-				<div class="comment-text">{{comment.message}}</div>
-			</div>
-		<div>
+		<div class="row">
+			<div ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
+				<div class="col-md-2" style="background-color:blue">
+					<a href="tst">{{comment.pageTitle}}</a>
+					<div class="mic-info"> By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</div>
+				</div>
+				<div class="col-md-10" style="background-color:green">
+					<div class="comment-text">{{comment.message}}</div>
+				</div>
+			<div>
+		</div>
 </div>
