--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -10,6 +10,7 @@
 			<div class="col-md-10" style="">
 				<div class="comment-text">{{comment.message}}</div>
 			</div>
+			<div class="col-md12">&nbsp;</div>
 		<div>
 	</div>
 </div>
