--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -1,8 +1,8 @@
 <!-- only show this block, if there are any comments for this page -->
 <div ng-show="(comments.entries | filter: { pageTitle: filterString }).length>0">
 	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> Comments</legend>
-	<div class="col-md-12 panel widget">
-		<div class="row" ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
+	<div class="row">
+		<div ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
 			<div class="col-md-2" style="">
 				<a href="tst">{{comment.pageTitle}}</a>
 				<div class="mic-info"><small>By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</small></div>
