--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -4,8 +4,8 @@
 	<div ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
 		<table class="table">
 			<tbody>
-				<tr class="active">
-					<td>
+				<tr class="active" >
+					<td class="col-sm-2">
 						<a href="tst">{{comment.pageTitle}}</a>
 						<small>By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</small>
 					</td>
