--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -2,7 +2,7 @@
 <div ng-show="(comments.entries | filter: { pageTitle: filterString }).length>0">
 	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> Comments</legend>
 	<div ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
-		<table class="table">
+		<table class="table table-condensed table-striped"">
 			<tbody>
 				<tr>
 					<td class="col-sm-2">
