--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -6,7 +6,7 @@
 				<tr ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
 					<td class="col-sm-2">
 						<a href="tst">{{comment.pageTitle}}</a><br>
-						<small>By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</small>
+						<span style="font-size:1em;">By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</span>
 					</td>
 					<td>
 						{{comment.message}}
