--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -1,14 +1,14 @@
 <!-- only show this block, if there are any comments for this page -->
 <div ng-show="(comments.entries | filter: { pageTitle: filterString }).length>0">
 	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> Comments</legend>
-		<table class="table table-hover" style="border-top: none;">
+		<table class="table table-hover">
 			<tbody>
-				<tr ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity" style="border-top: none;">
-					<td class="col-sm-2" >
+				<tr ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
+					<td class="col-sm-2" style="border-top: none;">
 						<a href="tst">{{comment.pageTitle}}</a><br>
 						<span style="font-size:0.8em;">By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</span>
 					</td>
-					<td>
+					<td style="border-top: none;">
 						{{comment.message}}
 					</td>
 				</tr>
