--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -13,5 +13,6 @@
 					</td>
 				</tr>
 			</tbody>
+			<a href="#" class="btn btn-primary btn-sm btn-block" role="button" ng-click="more()"><span class="glyphicon glyphicon-refresh"></span> More</a>
 		</table>
 </div>
