--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -13,6 +13,14 @@
 					</td>
 				</tr>
 			</tbody>
-			<a href="#" class="btn btn-primary btn-sm btn-block" role="button" ng-click="more()"><span class="glyphicon glyphicon-refresh"></span> More</a>
 		</table>
+		<div class="row">
+			<div class="col-xs-12 col-md-12 form-group">
+				<button class="btn btn-primary pull-right" type="button" ng-click="more()">
+					<span class="glyphicon glyphicon-refresh"></span>
+					More
+				</button>
+                </div>
+            </div>
+		</div>
 </div>
