--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -2,7 +2,7 @@
 <div ng-show="(comments.entries | filter: { pageTitle: filterString }).length>0">
 	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> 
 		Comments
-		<button class="btn btn-primary pull-right" type="button" ng-click="more()">
+		<button class="btn btn-primary" type="button" ng-click="more()">
 			<span class="glyphicon glyphicon-refresh"></span>
 			More	
 		</button>
