--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -7,7 +7,7 @@
 			More	
 		</button>
 	</legend>
-	<table class="table table-hover">
+	<table class="table table-hover table-striped">
 		<tbody>
 			<tr ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
 				<td class="col-sm-2" style="border-top: none;">
