--- a/_includes/widgets/comments/recentComments.html
+++ b/_includes/widgets/comments/recentComments.html
@@ -1,5 +1,6 @@
 {% include widgets/comments/recentComments.css %}
 
-<div data-ng-controller="CommentsCtrl">
+<div ng-cloak ng-hide="config.keenio.comments_url == ''" data-ng-controller="CommentsCtrl">
+	{{config.keenio.comments_url}}
     <div data-ng-include data-src="'/app/partials/comments.html'"></div>
 </div>
