--- a/app/partials/githubLogin.html
+++ b/app/partials/githubLogin.html
@@ -1,11 +1,11 @@
 <div class="modal-dialog">
 	<div class="modal-content">
-	  <div class="modal-header">
+	  <div class="modal-header dialog-header-confirm">
 		<h4 class="modal-title">
 		  User's Name
 		</h4>
 	  </div>
-	  <div class="modal-body form-group input-group-lg" ng-class="{true: 'has-error'}[nameDialog.username.$dirty &amp;&amp; nameDialog.username.$invalid]">
+	  <div class="modal-body form-group input-group-lg" ng-class="{true: 'has-error'}[nameDialog.username.$dirty && nameDialog.username.$invalid]">
 		<label for="course" class="control-label">Name:</label>
 		<input type="text" required ng-keyup="hitEnter($event)" ng-model="user.name" id="username" name="username" class="form-control ng-pristine ng-invalid ng-invalid-required" />
 		<span class="help-block">
