--- a/app/partials/githubLogin.html
+++ b/app/partials/githubLogin.html
@@ -9,7 +9,7 @@
 		<label for="course" class="control-label">Name:</label>
 		<input type="text" required ng-keyup="hitEnter($event)" ng-model="user.name" id="username" name="username" class="form-control ng-pristine ng-invalid ng-invalid-required" />
 		<label for="password" class="control-label">Password:</label>
-		<input type="text" required ng-keyup="hitEnter($event)" ng-model="user.password" id="password" name="password" class="form-control ng-pristine ng-invalid ng-invalid-required" />
+		<input type="password" required ng-keyup="hitEnter($event)" ng-model="user.password" id="password" name="password" class="form-control ng-pristine ng-invalid ng-invalid-required" />
 		<span class="help-block">
 			This app is not configured for the github oauth login workflow. Please enter your github username/password. The credentials are stored in your browser. Generally you should
 			consider not to enter any of your secrets in broser windows other than the original site. If you are the administrator of this site please consider to enable oauth access - you
