--- a/app/partials/githubLogin.html
+++ b/app/partials/githubLogin.html
@@ -4,16 +4,18 @@
 	  Github Login
 	</h4>
   </div>
-  <div class="modal-body form-group input-group-lg" ng-class="{true: 'has-error'}[nameDialog.username.$dirty && nameDialog.username.$invalid]">
-	<label for="course" class="control-label">Name:</label>
-	<input type="text" ng-keyup="hitEnter($event)" ng-model="user.name" id="username" name="username" class="form-control ng-pristine ng-invalid ng-invalid-required" required/>
-	<label for="password" class="control-label">Password:</label>
-	<input type="password" ng-keyup="hitEnter($event)" ng-model="user.password" id="password" name="password" class="form-control ng-pristine ng-invalid ng-invalid-required" required/>
-	<span class="help-block">
-		This app is not configured for the github oauth login workflow. Please enter your github username/password. The credentials are stored in your browser. Generally you should
-		consider not to enter any of your secrets in broser windows other than the original site. If you are the administrator of this site please consider to enable oauth access - you
-		can find useful information here <a href="/doku/2014/04/25/enable-oauth">on the help pages</a>.
-	</span>
+  <div class="modal-body">
+	<ng-form name="nameDialog" novalidate role="form">
+	<div class="form-group input-group-lg" ng-class="{true: \'has-error\'}[nameDialog.username.$dirty && nameDialog.username.$invalid]">
+		<label for="course" class="control-label">Name:</label>
+		<input type="text" ng-keyup="hitEnter($event)" ng-model="user.name" id="username" name="username" class="form-control ng-pristine ng-invalid ng-invalid-required" required/>
+		<label for="password" class="control-label">Password:</label>
+		<input type="password" ng-keyup="hitEnter($event)" ng-model="user.password" id="password" name="password" class="form-control ng-pristine ng-invalid ng-invalid-required" required/>
+		<span class="help-block">
+			This app is not configured for the github oauth login workflow. Please enter your github username/password. The credentials are stored in your browser. Generally you should
+			consider not to enter any of your secrets in broser windows other than the original site. If you are the administrator of this site please consider to enable oauth access - you
+			can find useful information here <a href="/doku/2014/04/25/enable-oauth">on the help pages</a>.
+		</span>
   </div>
   <div class="modal-footer">
 	<button ng-click="cancel()" class="btn btn-default" type="button">Cancel</button>
