--- a/app/partials/githubLogin.html
+++ b/app/partials/githubLogin.html
@@ -6,7 +6,7 @@
   </div>
   <div class="modal-body">
 	<ng-form name="nameDialog" novalidate role="form">
-	<div class="form-group input-group-lg" ng-class="{true: \'has-error\'}[nameDialog.username.$dirty && nameDialog.username.$invalid]">
+	<div class="form-group input-group-lg" ng-class="{true: has-error'}[nameDialog.username.$dirty && nameDialog.username.$invalid]">
 		<label for="course" class="control-label">Name:</label>
 		<input type="text" ng-keyup="hitEnter($event)" ng-model="user.name" id="username" name="username" class="form-control ng-pristine ng-invalid ng-invalid-required" required/>
 		<label for="password" class="control-label">Password:</label>
