--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -87,6 +87,7 @@
 							<li><a href="/app/admin/fork.html">Clone/Fork</a></li>
 							<li ng-hide="!user.isAdmin"><a href="/app/admin/editConfig.html">Edit Config</a></li>
 							<li ng-hide="!user.isAdmin"><a href="/app/admin/edit.html">Create Post</a></li>
+							<li ng-hide="!user.isAdmin"><a href="/app/admin/admin.html">Admin</a></li>
 							<li class="divider"></li>
 							<li><a href="#" ng-click="logout()">Logout</a></li>
 					  </ul>
