--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -10,6 +10,7 @@
                     <a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
                         Date
                         <span ng-show="orderByField == 'Date'">
+							<span class="caret"></span>
                             <span ng-show="!reverseSort">^</span>
                             <span ng-show="reverseSort">v</span>
                         </span>
