--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -10,9 +10,8 @@
                     <a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
                         Date
                         <span ng-show="orderByField == 'Date'">
-							<span class="caret"></span>
-                            <span ng-show="!reverseSort">^</span>
-                            <span ng-show="reverseSort">v</span>
+							<span class=".caret-up" ng-show="!reverseSort"></span>
+							<span class=".caret-down" ng-show="reverseSort"></span>
                         </span>
                     </a>
                 </th>
