--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -2,7 +2,7 @@
 
 	<legend><span class="glyphicon glyphicon-tree-deciduous" style="font-size:0.8em"></span> Posts</legend>
 
-    <div class= style="">
+    <div style="">
         <table class="table table-striped" style="table-layout: fixed" >
             <thead>
             <tr>
