--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -35,6 +35,7 @@
 	<link href="/assets/themes/bootstrap-3.1.1/css/superhero/bootstrap.min.css" rel="alternate stylesheet" title="superhero">
 	<link href="/assets/themes/bootstrap-3.1.1/css/yeti/bootstrap.min.css" rel="alternate stylesheet" title="yeti">
 	
+	<link href="/app/css/style.css" rel="stylesheet">
     <link href="/assets/themes/syntax/style-addition.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="/assets/themes/syntax/syntax.css" rel="stylesheet" type="text/css" media="all">
     <link href="/assets/js/bootstrap-markdown-2.3.1/css/bootstrap-markdown.min.css" rel="stylesheet" type="text/css" media="all">
