--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -11,7 +11,7 @@
                         Date
                         <span ng-show="orderByField == 'Date'">
 							<span class="caret" ng-show="!reverseSort"></span>
-							<span class="caret caret-reversed" ng-show="reverseSort"></span>
+							<span class="caret caret-reversed a" ng-show="reverseSort"></span>
                         </span>
                     </a>
                 </th>
