--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -10,7 +10,7 @@
                     <a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
                         Date
                         <span ng-show="orderByField == 'Date'">
-							<span class="caret" ng-show="!reverseSort"></span>
+							<span class="caret a" ng-show="!reverseSort"></span>
 							<span class="caret caret-reversed a" ng-show="reverseSort"></span>
                         </span>
                     </a>
