--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -10,8 +10,8 @@
                     <a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
                         Date
                         <span ng-show="orderByField == 'Date'">
-							<span class="caret a" ng-show="!reverseSort"></span>
-							<span class="caret caret-reversed a" ng-show="reverseSort"></span>
+							<span class="caret" ng-show="!reverseSort"></span>
+							<span class="caret caret-reversed" ng-show="reverseSort"></span>
                         </span>
                     </a>
                 </th>
