--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -23,7 +23,7 @@
             <tr ng:repeat="post in posts.entries |orderBy:orderByField:reverseSort | filter:searchText">
                 <td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.Preview}}" ng-show="post.Preview"></td>
                 <td class="title"><a href="{{ post.Url }}">{{ post.Title }}</a></td>
-                <td class="tags"><input ng:repeat="tag in posts.tags" class="btn btn-default" type="button" value="{{ tag }}" /></td>
+                <td class="tags"><input ng:repeat="tag in post.tags" class="btn btn-default" type="button" value="{{ tag }}" /></td>
             </tr>
             </tbody>
         </table>
