--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -18,7 +18,7 @@
 					{{comment.message}}
 				</td>
 				<td>
-					<button ng-hide="!isAdmin" ng-click="delete()" class="btn btn-danger btn-middle" type="button">Delete</button>
+					<button ng-click="delete()" class="btn btn-danger btn-middle" type="button">Delete</button>
 				</td>
 			</tr>
 		</tbody>
