--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -2,7 +2,7 @@
     <div style="margin-top: 0px" class="page-header">
         <h1 style="float:left">Posts</h1>
         <div style="padding-top:25px;text-align:right">
-            <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
+            <input type="text" class="search form-control col-xs-3" placeholder="Search" ng-model="searchText"/>
         <div style="clear:both;"></div>
     </div>
     <div style="">
